--- a/_posts/2015-04-23-night-sky.markdown
+++ b/_posts/2015-04-23-night-sky.markdown
@@ -1,8 +1,8 @@
 ---
 title:  "Absense of light"
 subtitle: "Only lights from space"
-author: "Wferr"
-avatar: "img/authors/wferr.png"
+author: "Lin"
+avatar: "img/authors/Lin.png"
 image: "img/d.jpg"
 date:   2015-04-23 12:12:12
 ---
