--- a/_posts/2015-04-24-i-scream.markdown
+++ b/_posts/2015-04-24-i-scream.markdown
@@ -1,8 +1,8 @@
 ---
 title:  "I scream"
 subtitle: "But do you scream?"
-author: "Wferr"
-avatar: "img/authors/wferr.png"
+author: "Lin"
+avatar: "img/authors/Lin.png"
 image: "img/e.jpg"
 date:   2015-04-24 12:12:12
 ---
