--- a/_posts/2015-04-25-workshop.markdown
+++ b/_posts/2015-04-25-workshop.markdown
@@ -5,7 +5,7 @@ author: "Lin"
 avatar: "img/authors/Lin.png"
 image: "img/f.jpg"
 date:   2019-04-25 12:12:12
-published: "false"
+published: false
 ---
 
 ### Dolor sit amet?
