--- a/_posts/2019-05-31-Kashmir2.markdown
+++ b/_posts/2019-05-31-Kashmir2.markdown
@@ -81,7 +81,9 @@ Darbar 则为统治者的大厅。
 多少男儿奔向沙场，多少血泪挥洒其间，然而正是这些来来回回残酷的斗争组成了历史的模样，很难说个好与坏。
 也许本来就没有好坏之分，有的只是记录、发生，再记录、再发生。
 
-那你说阿克赛钦是我们的吗？
+那你说阿克赛钦是我们的还是他们的？
+都不是。
+
 
  - 卖花的男人
 
