--- a/_posts/2015-04-20-planes.markdown
+++ b/_posts/2015-04-20-planes.markdown
@@ -5,6 +5,7 @@ author: "Lin"
 avatar: "img/authors/Lin.png"
 image: "img/a.jpg"
 date:   2019-04-20 12:12:12
+published: false
 ---
 
 ### Dolor sit amet?
