--- a/_posts/2015-04-23-night-sky.markdown
+++ b/_posts/2015-04-23-night-sky.markdown
@@ -5,6 +5,7 @@ author: "Lin"
 avatar: "img/authors/Lin.png"
 image: "img/d.jpg"
 date:   2019-04-23 12:12:12
+published: false
 ---
 
 ### Dolor sit amet?
