--- a/_posts/2019-02-21-Kashmir.markdown
+++ b/_posts/2019-02-21-Kashmir.markdown
@@ -5,6 +5,7 @@ author: "Lin"
 avatar: "img/authors/Lin.png"
 image: "https://raw.githubusercontent.com/JounyWang/JounyWang.github.io/master/_posts/travel/img/IMG_9594.JPG"
 date:   2019-05-31 12:12:12
+published: false
 ---
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" src="//music.163.com/outchain/player?type=2&id=488919853&auto=1&height=66"></iframe>
 
