--- a/_posts/2019-06-01-Kashmir2.markdown
+++ b/_posts/2019-06-01-Kashmir2.markdown
@@ -2,7 +2,7 @@
 title:  "克什米尔行记(下)"
 subtitle: "“你知道阿克赛钦吗？那是我们的地方”"
 author: "Lin"
-avatar: "img/authors/Lin.png"
+avatar: "https://ae01.alicdn.com/kf/H8457970c416f4b8188bcd4608d31814cJ.jpg"
 image: "https://raw.githubusercontent.com/JounyWang/JounyWang.github.io/master/_posts/travel/img/IMG_9813.JPG"
 date:   2019-06-01 12:12:12
 published: false
